# MotoConnector

./: .gitignore  Dockerfile  manage.py  pyproject.toml  run.sh
MotoConnector/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
motomap/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
motomap/migrations/: 0001_initial.py  0002_landscape_placetag_place_tags.py  0003_place_landscapes_alter_place_tags.py  0004_placeimage.py  0005_rename_location_place_geometry.py  0006_place_discoverer.py  0007_place_created_at_place_updated_at_and_more.py
service/: admin.py  models.py  tasks.py
service/migrations/: 0001_initial.py  0002_remove_motorcycle_moto_company_and_more.py
socials/: admin.py  models.py  serializers.py  urls.py  views.py
socials/migrations/: 0001_initial.py  0002_commentbinarygrade_unique_user_comment_grade.py
templates/: map.html
userauth/: admin.py  models.py  openapi.py  serializers.py  urls.py  utils.py  views.py
userauth/management/commands/: super_user_creation.py
userauth/migrations/: 0001_initial.py  0002_alter_pendinguser_verification_code.py  0003_alter_userprofile_phone.py  0004_userprofile_instagram_userprofile_tg_userprofile_vk_and_more.py  0005_userprofile_description.py  0006_userprofile_created_at_userprofile_updated_at.py
